Added pic of the day section, need to work more on looks

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
     />
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="/style.css" />
 
     <!-- Bootstrap -->
 
